# openfortivpn

./: .gitignore  CMakeLists.txt  Makefile.am  README.md
.github/workflows/: openfortivpn.yml  release.yml  windows.yml
gui/: ARCHITECTURE.md  OpenFortiVPN.GUI.sln  README.md
gui/OpenFortiVPN.GUI/: App.xaml  App.xaml.cs  OpenFortiVPN.GUI.csproj  app.manifest
gui/OpenFortiVPN.GUI/Controls/: StatusIndicator.xaml  StatusIndicator.xaml.cs
gui/OpenFortiVPN.GUI/Converters/: ConnectionStateConverters.cs
gui/OpenFortiVPN.GUI/Helpers/: NavItemConverter.cs  PasswordBoxHelper.cs
gui/OpenFortiVPN.GUI/Models/: AppSettings.cs  ConnectionInfo.cs  LogEntry.cs  VpnProfile.cs
gui/OpenFortiVPN.GUI/Services/: CredentialService.cs  EventStreamParser.cs  ICredentialService.cs  IDispatcherService.cs  INavigationService.cs  INotificationService.cs  IProfileService.cs  ISettingsService.cs  IVpnService.cs  NavigationService.cs  NotificationService.cs  ProfileService.cs  SettingsService.cs  VpnService.cs
gui/OpenFortiVPN.GUI/Themes/: Colors.xaml  Controls.xaml  Typography.xaml
gui/OpenFortiVPN.GUI/ViewModels/: DashboardViewModel.cs  LogViewerViewModel.cs  MainViewModel.cs  ProfileEditorViewModel.cs  ProfileListViewModel.cs  SettingsViewModel.cs
gui/OpenFortiVPN.GUI/Views/: DashboardView.xaml  DashboardView.xaml.cs  LogViewerView.xaml  LogViewerView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProfileEditorView.xaml  ProfileEditorView.xaml.cs  ProfileListView.xaml  ProfileListView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
gui/OpenFortiVPN.TestHarness/: OpenFortiVPN.TestHarness.csproj  Program.cs
gui/OpenFortiVPN.TestHarness/Scenarios/: AuthFailedScenario.cs  CertErrorScenario.cs  DnsFailedScenario.cs  IScenario.cs  OtpRequiredScenario.cs  PermissionDeniedScenario.cs  SuccessfulConnectScenario.cs
gui/OpenFortiVPN.Tests/: OpenFortiVPN.Tests.csproj
gui/OpenFortiVPN.Tests/Integration/: VpnServiceIntegrationTests.cs
gui/OpenFortiVPN.Tests/TestData/: sample-config.txt
gui/OpenFortiVPN.Tests/Unit/: ConverterTests.cs  CredentialServiceTests.cs  DashboardViewModelTests.cs  ErrorClassifierTests.cs  EventStreamParserTests.cs  ExitCodeMappingTests.cs  LogViewerViewModelTests.cs  MainViewModelTests.cs  NavigationServiceTests.cs  NotificationServiceTests.cs  ProfileEditorViewModelTests.cs  ProfileServiceExportTests.cs  ProfileServiceImportTests.cs  ProfileServicePersistenceTests.cs  SettingsServiceTests.cs  TlsVersionExtensionsTests.cs  VpnLogLevelExtensionsTests.cs  VpnProfileBuildArgumentsTests.cs
installer/: README.md  openfortivpn.nsi
lib/getopt/: getopt.c  getopt.h
src/: compat_win32.h  config.c  config.h  event.c  event.h  exit_codes.h  hdlc.h  http.c  http_server_win.c  io.c  io_win.c  ipv4.h  ipv4_win.c  log_win.c  main.c  openfortivpn_io.h  ppp.c  ppp.h  ssl.h  tunnel.h  tunnel_win.c  userinput_win.c  wintun.h
tests/: test_ppp.c
tests/ci/checkpatch/: typedefs.checkpatch
tests/lint/: checkpatch.sh
